--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -26,5 +26,6 @@
     <string name="scanning">Scanning</string>
     <string name="gps_location">Gps Location</string>
     <string name="location_found">Location Found</string>
+    <string name="chemicalUsed2">Second Chemical Used</string>
 
 </resources>
