renaming id names to follow convention

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -32,5 +32,8 @@
     <string name="addForeman">Add Foreman</string>
     <string name="dataRecorded">Data Recorded</string>
     <string name="finished">Finished</string>
+    <string name="foremanID">Foreman ID</string>
+    <string name="nfcInstructions">Place phone on top of the Sprayer's badge</string>
+    <string name="otherChemicalUsed">Other Chemical Used?</string>
 
 </resources>
