Foreman scan is now first. Changed the interface a bit to address issues brought up in user testing.. will document in the wiki. Also refactored a tiny bit, but more to come.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -37,5 +37,8 @@
     <string name="sprayerIDs">Sprayer IDs</string>
     <string name="startSpray">Start New Spray</string>
     <string name="yes">Yes</string>
+    
+    <string name="scanSelfLabel">Identify yourself</string>
+    <string name="scanSelf">Scan my badge</string>
 
 </resources>
