Further changes to RFID pages. Removed confirm/back buttons for RFId spray. Also inserted a placeholder screen that will be used later.. still working on stuff.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -40,5 +40,9 @@
     
     <string name="scanSelfLabel">Identify yourself</string>
     <string name="scanSelf">Scan my badge</string>
+    
+    <string name="scanSprayerLabel">Identify the sprayers for this house</string>
+    <string name="scanSprayer">Scan a sprayer\'s badge</string>
+    <string name="scanAnotherSprayer">Scan another sprayer\'s badge</string>
 
 </resources>
