Lots of changes! I forgot to mention in the last change, I changed the name of the foreman from Simba R to Dakarai R since we already had a Simba. Changed the order of screens so now it goes, Foreman Scan --> GPS --> Add Sprayers. I added some intermediary screens too to make it clearer what is going on. Changed various text labels and buttons to be consistent and more appropriate. Code is pretty messy right now and there are some classes that arent used and some XML things that arent used and things that are named weird... but at least it worksgit status

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -18,10 +18,10 @@
     <string name="emptyString"/>
     <string name="finished">Finished</string>
     <string name="foremanID">Foreman ID</string>
-    <string name="gps_location">Gps Location</string>
+    <string name="gps_location">GPS Location</string>
     <string name="hintNumRooms"># of Rooms</string>
     <string name="hintNumShelters"># of Shelters</string>
-    <string name="location_found">Location Found</string>
+    <string name="location_found">You are at 29.81 S, 25.34 E</string>
     <string name="mSprayTitle">mSpray</string>
     <string name="nfcInstructions">Place phone on top of the Sprayer\'s badge</string>
     <string name="no">No</string>
