final screen, pyrethroids is now fixed up as well

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="confirmDDT">Confirm - DDT</string>
     <string name="confirmNoSpray">Confirm - No Spray</string>
     <string name="confirmPyrethroid">Confirm - Pyrethroid</string>
+    <string name="confirmUnsprayed">Confirm - Unsprayed</string>
     <string name="dataRecorded">Data Recorded</string>
     <string name="ddt">DDT</string>
     <string name="emptyString"/>
