More style/font changes. Also deleted SprayerIDScan.java and add_sprayer.xml which are no longer used.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -22,11 +22,11 @@
     <string name="gps_location">GPS Location</string>
     <string name="hintNumRooms"># of Rooms</string>
     <string name="hintNumShelters"># of Shelters</string>
-    <string name="location_found">You are at 29.81 S, 25.34 E</string>
+    <string name="location_found">You are at \n 29.81 S, 25.34 E</string>
     <string name="mSprayTitle">mSpray</string>
     <string name="nfcInstructions">Place phone on top of the Sprayer\'s badge</string>
     <string name="no">No</string>
-    <string name="noSpray">No Spray</string>
+    <string name="noSpray">No Chemical</string>
     <string name="otherChemicalUsed">Other Chemical Used?</string>
     <string name="placeholder">placeholder text</string>
     <string name="pyrethroid">Pyrethroid</string>
