Minor improvements to wording

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,15 +7,16 @@
     <string name="app_name">mSpray</string>
     <string name="back">Back</string>
     <string name="canRefilled">Refilled Can?</string>
-    <string name="chemicalUsed">The sprayers used</string>
+    <string name="chemicalUsed">The sprayers used...</string>
     <string name="chemicalUsed2">Second Chemical Used</string>
-    <string name="confirm">Confirm</string>
+    <string name="confirm">OK</string>
     <string name="confirmDDT">DDT Spray Data</string>
     <string name="confirmNoSpray">Spray Data</string>
     <string name="confirmPyrethroid">Pyrethroid Spray Data</string>
-    <string name="confirmUnsprayed">Spray Data</string>
+    <string name="confirmUnsprayed">What was not sprayed?</string>
     <string name="DDTHeader">DDT sprayed by</string>
     <string name="PyrethroidHeader">Pyrethroid sprayed by</string>
+    <string name="sprayHeader">sprayed by</string>
     <string name="NoSprayHeader">No rooms sprayed by</string>
     <string name="dataRecorded">Data Recorded</string>
     <string name="ddt">DDT</string>
