cleaning up code, removing unused methods

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="app_name">mSpray</string>
     <string name="back">Back</string>
     <string name="canRefilled">Refilled Can?</string>
-    <string name="chemicalUsed">The sprayers used...</string>
+    <string name="chemicalUsed">The sprayers used&#8230;</string>
     <string name="chemicalUsed2">Second Chemical Used</string>
     <string name="confirm">OK</string>
     <string name="confirmDDT">DDT Spray Data</string>
@@ -22,25 +22,33 @@
     <string name="ddt">DDT</string>
     <string name="emptyString"/>
     <string name="finished">Finished</string>
+    <string name="foreman">Foreman</string>
     <string name="foremanID">Foreman ID</string>
     <string name="gps_location">GPS Location</string>
     <string name="hintNumRooms"># of Rooms</string>
     <string name="hintNumShelters"># of Shelters</string>
+    <string name="latitude">Latitude</string>
     <string name="location_found">I am at \n 29.81 S, 25.34 E</string>
+    <string name="longitude">Longitude</string>
     <string name="mSprayTitle">mSpray</string>
     <string name="nfcInstructions">Place phone on top of the Sprayer\'s badge</string>
     <string name="no">No</string>
     <string name="noSpray">No Chemical</string>
+    <string name="oneSprayer">1 sprayer</string>
     <string name="otherChemicalUsed">Other Chemical Used?</string>
     <string name="sprayerName">Sprayer</string>
     <string name="pyrethroid">Pyrethroid</string>
     <string name="roomsSprayed">Rooms Sprayed: </string>
     <string name="roomsUnsprayed">Rooms Unsprayed: </string>
     <string name="scanning">Scanning</string>
+    <string name="scanBadge">Scan Badge</string>
     <string name="sheltersSprayed">Shelters Sprayed: </string>
     <string name="sheltersUnsprayed">Shelters Unsprayed: </string>
+    <string name="sprayer">Sprayer</string>
+    <string name="sprayer2">Sprayer 2</string>
     <string name="sprayerIDs">Sprayer IDs</string>
     <string name="startSpray">Start New Spray</string>
+    <string name="twoSprayers">2 sprayers</string>
     <string name="yes">Yes</string>
     
     <string name="scanSelfLabel">Who are you?</string>
