xml code refactoring

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,7 +6,6 @@
     <string name="addSprayer">Add Sprayer</string>
     <string name="app_name">mSpray</string>
     <string name="back">Back</string>
-    <string name="canRefilled">Refilled Can?</string>
     <string name="chemicalUsed">The sprayers used&#8230;</string>
     <string name="chemicalUsed2">Second Chemical Used</string>
     <string name="confirm">OK</string>
@@ -21,6 +20,7 @@
     <string name="dataRecorded">Data Recorded</string>
     <string name="ddt">DDT</string>
     <string name="emptyString"/>
+    <string name="emptyValue"> \? </string>
     <string name="finished">Finished</string>
     <string name="foreman">Foreman</string>
     <string name="foremanID">Foreman ID</string>
@@ -38,12 +38,18 @@
     <string name="otherChemicalUsed">Other Chemical Used?</string>
     <string name="sprayerName">Sprayer</string>
     <string name="pyrethroid">Pyrethroid</string>
-    <string name="roomsSprayed">Rooms Sprayed: </string>
-    <string name="roomsUnsprayed">Rooms Unsprayed: </string>
+    <string name="refillCan">Refill Can</string>
+    <string name="refillCanLabel">Refilled Can?</string>
+    <string name="roomsSprayed">Rooms Sprayed</string>
+    <string name="roomsSprayedLabel">Rooms Sprayed: </string>
+    <string name="roomsUnsprayed">Rooms Unsprayed</string>
+    <string name="roomsUnsprayedLabel">Rooms Unsprayed: </string>
     <string name="scanning">Scanning</string>
     <string name="scanBadge">Scan Badge</string>
-    <string name="sheltersSprayed">Shelters Sprayed: </string>
-    <string name="sheltersUnsprayed">Shelters Unsprayed: </string>
+    <string name="sheltersSprayed">Shelters Sprayed</string>
+    <string name="sheltersSprayedLabel">Shelters Sprayed: </string>
+    <string name="sheltersUnsprayed">Shelters Unsprayed</string>
+    <string name="sheltersUnsprayedLabel">Shelters Unsprayed: </string>
     <string name="sprayer">Sprayer</string>
     <string name="sprayer2">Sprayer 2</string>
     <string name="sprayerIDs">Sprayer IDs</string>
