new feature: once Foreman scans ID, he does not have to scan it for subsequent sprays anymore. when finished for the day, he presses 'i am finished' at the start new spray screen to go back to the mspray activity

--- a/mSprayApp/res/values/strings.xml
+++ b/mSprayApp/res/values/strings.xml
@@ -54,6 +54,7 @@
     <string name="sprayer2">Sprayer 2</string>
     <string name="sprayerIDs">Sprayer IDs</string>
     <string name="startSpray">Start New Spray</string>
+    <string name="doneSpraying">I am finished</string>
     <string name="twoSprayers">2 sprayers</string>
     <string name="yes">Yes</string>
     
