--- a/mSprayApp/res/values/strings.xml
+++ b/mSprayApp/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="chemicalUsed2">Second Chemical Used</string>
     <string name="confirm">OK</string>
     <string name="confirmDDT">DDT Spray Data</string>
-    <string name="confirmNoSpray">Spray Data</string>
+    <string name="confirmNoSpray">Unsprayed Data</string>
     <string name="confirmKOrthrine">K-Orthrine Spray Data</string>
     <string name="confirmUnsprayed">What was not sprayed?</string>
     <string name="DDTHeader">DDT sprayed by</string>
@@ -40,12 +40,14 @@
     <string name="sprayerName">Sprayer</string>
     <string name="refillCan">Refill Can</string>
     <string name="refillCanLabel">Refilled Can?</string>
+    <string name="rooms">Rooms</string>
     <string name="roomsSprayed">Rooms Sprayed</string>
     <string name="roomsSprayedLabel">Rooms Sprayed: </string>
     <string name="roomsUnsprayed">Rooms Unsprayed</string>
     <string name="roomsUnsprayedLabel">Rooms Unsprayed: </string>
     <string name="scanning">Scanning</string>
     <string name="scanBadge">Scan Badge</string>
+    <string name="shelters">Shelters</string>
     <string name="sheltersSprayed">Shelters Sprayed</string>
     <string name="sheltersSprayedLabel">Shelters Sprayed: </string>
     <string name="sheltersUnsprayed">Shelters Unsprayed</string>
