fixing colors on paperwork page

--- a/mSprayApp/res/values/strings.xml
+++ b/mSprayApp/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="ddt">DDT</string>
     <string name="emptyString"/>
     <string name="emptyValue"> \? </string>
+    <string name="fendona">Fendona</string>
     <string name="finished">Finished</string>
     <string name="foreman">Foreman</string>
     <string name="foremanID">Foreman ID</string>
