--- a/PDFFill/README
+++ b/PDFFill/README
@@ -1,11 +1,15 @@
 to compile:
-javac -cp ".:lib/*" *.java
+    make compile
+
+to clean:
+    make clean
+
 
 to run SP1Fill:
-java -cp ".:lib/*" SP1Fill
+    java -cp ".:lib/*" SP1Fill
 
 to run SP2Fill:
-java -cp ".:lib/*" SP1Fill
+    java -cp ".:lib/*" SP1Fill
 
 to run SP3Fill:
-java -cp ".:lib/*" SP1Fill
+    java -cp ".:lib/*" SP1Fill
