--- a/mSprayApp/res/values/strings.xml
+++ b/mSprayApp/res/values/strings.xml
@@ -10,15 +10,16 @@
     <string name="chemicalUsed2">Second Chemical Used</string>
     <string name="confirm">OK</string>
     <string name="confirmDDT">DDT Spray Data</string>
-    <string name="confirmNoSpray">Unsprayed Data</string>
+    <string name="confirmFendona">Fendona Spray Data</string>
     <string name="confirmKOrthrine">K-Orthrine Spray Data</string>
-    <string name="confirmUnsprayed">We did not spray...</string>
+    <string name="confirmNoSpray">Unsprayed Data</string>
+    <string name="confirmUnsprayed">We did not spray&#8230;</string>
     <string name="DDTHeader">DDT sprayed by</string>
     <string name="korthrineHeader">korthrine sprayed by</string>
     <string name="sprayHeader">sprayed by</string>
     <string name="NoSprayHeader">No rooms sprayed by</string>
     <string name="dataRecorded">Data Recorded</string>
-    <string name="unsprayedReason">It was...</string>
+    <string name="unsprayedReason">It was&#8230;</string>
     <string name="open">Open</string>
     <string name="locked">Locked</string>
     <string name="refused">Owner Refused</string>
@@ -67,11 +68,11 @@
     <string name="welcome">Welcome</string>
     <string name="yes">Yes</string>
     
-    <string name="scanSelfLabel">I am...</string>
+    <string name="scanSelfLabel">I am&#8230;</string>
     <string name="scanSelf">Scan my badge</string>
     <string name="noBadge">No badge</string>
     
-    <string name="scanSprayerLabel">The sprayers are...</string>
+    <string name="scanSprayerLabel">The sprayers are&#8230;</string>
     <string name="scanSprayer">Scan a sprayer\'s badge</string>
     <string name="scanAnotherSprayer">Scan another sprayer\'s badge</string>
     <string name="DoneForTheDay">Done for the day</string>
