--- a/mSprayApp/res/values/strings.xml
+++ b/mSprayApp/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="addSprayer">Add Sprayer</string>
     <string name="app_name">mSpray</string>
     <string name="back">Back</string>
+    <string name="chemical">Chemical</string>
     <string name="chemicalUsed">The sprayers used&#8230;</string>
     <string name="chemicalUsed2">Second Chemical Used</string>
     <string name="confirm">OK</string>
@@ -14,15 +15,9 @@
     <string name="confirmKOrthrine">K-Orthrine Spray Data</string>
     <string name="confirmNoSpray">Unsprayed Data</string>
     <string name="confirmUnsprayed">We did not spray&#8230;</string>
+    <string name="dataRecorded">Data Saved</string>
     <string name="DDTHeader">DDT sprayed by</string>
-    <string name="korthrineHeader">korthrine sprayed by</string>
-    <string name="sprayHeader">sprayed by</string>
-    <string name="NoSprayHeader">No rooms sprayed by</string>
-    <string name="dataRecorded">Data Recorded</string>
-    <string name="unsprayedReason">It was&#8230;</string>
-    <string name="open">Open</string>
-    <string name="locked">Locked</string>
-    <string name="refused">Owner Refused</string>
+    <string name="DoneForTheDay">Done for the day</string>
     <string name="ddt">DDT</string>
     <string name="emptyString"/>
     <string name="emptyValue"> \? </string>
@@ -35,13 +30,18 @@
     <string name="hintNumRooms"># of Rooms</string>
     <string name="hintNumShelters"># of Shelters</string>
     <string name="korthrine">K-Orthrine</string>
+    <string name="korthrineHeader">korthrine sprayed by</string>
     <string name="latitude">Latitude</string>
     <string name="location_found">I am at \n 29.81 S, 25.34 E</string>
+    <string name="locked">Locked</string>
     <string name="longitude">Longitude</string>
     <string name="mSprayTitle">mSpray</string>
     <string name="nfcInstructions">Place phone on top of the Sprayer\'s badge</string>
     <string name="no">No</string>
+    <string name="noBadge">No badge</string>
     <string name="noSpray">No Chemical</string>
+    <string name="NoSprayHeader">No rooms sprayed by</string>
+    <string name="open">Open</string>
     <string name="oneSprayer">1 sprayer</string>
     <string name="otherChemicalUsed">Other Chemical Used?</string>
     <string name="sprayerName">Sprayer</string>
@@ -49,6 +49,7 @@
     <string name="refillCan">Refill Can</string>
     <string name="refillCanLabel">Refilled Can?</string>
     <string name="refillCanLabel2">  Refilled Can</string>
+    <string name="refused">Owner Refused</string>
     <string name="rooms">Rooms</string>
     <string name="roomsSprayed">Rooms Sprayed</string>
     <string name="roomsSprayedLabel">Rooms Sprayed: </string>
@@ -57,29 +58,25 @@
     <string name="roomsUnsprayedLabel">Rooms Unsprayed: </string>
     <string name="scanning">Scanning</string>
     <string name="scanBadge">Scan Badge</string>
+    <string name="scanAnotherSprayer">Scan another sprayer\'s badge</string>
+    <string name="scanSelf">Scan my badge</string>
+    <string name="scanSelfLabel">I am&#8230;</string>
+    <string name="scanSprayer">Scan a sprayer\'s badge</string>
+    <string name="scanSprayerLabel">The sprayers are&#8230;</string>
     <string name="shelters">Shelters</string>
     <string name="sheltersSprayed">Shelters Sprayed</string>
     <string name="sheltersSprayedLabel">Shelters Sprayed: </string>
     <string name="sheltersSprayedLabel2">  Shelters Sprayed</string>
     <string name="sheltersUnsprayed">Shelters Unsprayed</string>
     <string name="sheltersUnsprayedLabel">Shelters Unsprayed: </string>
+    <string name="sprayHeader">sprayed by</string>
     <string name="sprayer">Sprayer</string>
     <string name="sprayer2">Sprayer 2</string>
     <string name="sprayerIDs">Sprayer IDs</string>
     <string name="startSpray">Start new spray</string>
     <string name="doneSpraying">Finished</string>
     <string name="twoSprayers">2 sprayers</string>
+    <string name="unsprayedReason">It was&#8230;</string>
     <string name="welcome">Welcome</string>
     <string name="yes">Yes</string>
-    
-    <string name="scanSelfLabel">I am&#8230;</string>
-    <string name="scanSelf">Scan my badge</string>
-    <string name="noBadge">No badge</string>
-    
-    <string name="scanSprayerLabel">The sprayers are&#8230;</string>
-    <string name="scanSprayer">Scan a sprayer\'s badge</string>
-    <string name="scanAnotherSprayer">Scan another sprayer\'s badge</string>
-    <string name="DoneForTheDay">Done for the day</string>
-    <string name="chemical">Chemical</string>
-
 </resources>
